# distr-chat

./: compose.yml
api/: nginx.conf
auth/: Dockerfile  pyproject.toml
auth/app/: main.py  schemas.py
feed/: Dockerfile  feed.db  pyproject.toml
feed/app/: database.py  dependencies.py  main.py  models.py  schemas.py
likes/: Dockerfile  pyproject.toml
likes/app/: database.py  dependencies.py  main.py  models.py  schemas.py
