[tool.poetry]
name = "feed"
version = "0.1.0"
description = ""
authors = ["alexstrnik <alex.str.nik@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
jwt = "^1.3.1"
fastapi = "^0.115.0"
sqlalchemy = "^2.0.35"
pydantic = "^2.9.2"
uvicorn = "^0.31.1"
pyjwt = "^2.9.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
